<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Teacher\'s e-Planner</string>
	<string name="navigation_menu">Navigation Menu</string>
	<string name="greetings">Добро пожаловать в программу "Teacher's e-Planner"</string>
	<string name="action_settings">Settings</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="the_guy_description">the_guy.jpg The Warrior, The Messiah, The Savor</string>
	<string name="dialog_timetable_griditem_title">Изменить день</string>
	<string name="dialog_timetable_griditem_hint">Введите номер аудитории</string>
	<string name="drawer_shadow">Drawer shadow</string>
	<string name="drawer_hint">Drawer hint</string>
	<string name="quad_list">Quad list</string>
	<string name="add">Добавить</string>
	<string name="cancel">Отменить</string>
	<string name="delete">Удалить</string>
	<string name="add_student">Добавить студента</string>
	<string name="add_lesson">Добавить занятие</string>
	<string name="student_fio">Ф.И.О. студента</string>
	<string name="student_id">ID студента</string>
	<string name="current_classes">Текущие задания</string>
	<string name="symbols">Символы</string>
	<string name="retteling">Пересказ</string>
	<string name="translating">Перевод</string>
	<string name="words">Слова</string>
	<string name="class_type">Тип занятия</string>
	<string name="homereading">Домашнее чтение</string>
	<string name="homework">Домашнее задание</string>
	<string name="mark">Оценка</string>
	<string name="email">E-mail</string>
	<string name="telephone">Номер телефона</string>
	<string name="note">Заметка</string>
	<string name="save">Сохранить</string>
	<string name="back">Назад</string>
	<string name="n_a">Отсутствовал</string>

</resources>
