<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="com.teacherse_planner.StudentCardFragment" >
	
	<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_fio"
        android:background="@android:color/holo_orange_light" >
    </TextView>

    <EditText
        android:id="@+id/fio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/student_fio" >
    </EditText>
    <!-- Телефон -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telephone"
        android:background="@android:color/holo_orange_light" >
    </TextView>

    <EditText
        android:id="@+id/telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/telephone" >
    </EditText>
    <!-- E-mail -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:background="@android:color/holo_orange_light" >
    </TextView>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email" >
    </EditText>
    <!-- Заметка -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:background="@android:color/holo_orange_light" >
    </TextView>

    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:minHeight="60dp"
        android:inputType="text"
        android:hint="@string/note" >
    </EditText>
    
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >
				
	    <Button
	        android:id="@+id/cancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/cancel" />
	    
	    <Button
	        android:id="@+id/back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/back" />
	    
	    <Button
	        android:id="@+id/save"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/save" />
	
	</LinearLayout>
	
</LinearLayout>
