<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/class_type"
		android:background="@android:color/holo_orange_light" />
	<TextView
		android:id="@+id/homereading"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:gravity="center"
		android:text="@string/homereading"
		android:textColor="@color/pen"
		android:background="@android:color/darker_gray" />
	<TextView
		android:id="@+id/mark"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:gravity="center"
		android:text="@string/mark"
		android:textColor="@color/pen"
		android:background="@android:color/darker_gray" />

</LinearLayout>
