<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >
	
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/homereading"
		android:textColor="@color/pencil"
		android:background="@android:color/holo_orange_light" />
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:weightSum="4" >
		
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/symbols"
			android:textColor="@color/pen"
			android:textStyle="italic" />
		
		<EditText
			android:id="@+id/symbols"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="3"
			android:inputType="number"
			android:textStyle="italic" />
		
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:weightSum="4" >
		
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/translating"
			android:textColor="@color/pen"
			android:textStyle="italic" />
		
		<CheckBox
			android:id="@+id/translating"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_gravity="right" />
		
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:weightSum="4" >
		
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/retteling"
			android:textColor="@color/pen"
			android:textStyle="italic" />
		
		<CheckBox
			android:id="@+id/retteling"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_gravity="right" />
		
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:weightSum="4" >
		
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/words"
			android:textColor="@color/pen"
			android:textStyle="italic" />
		
		<EditText
			android:id="@+id/words"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="3"
			android:inputType="number"
			android:textStyle="italic" />
		
	</LinearLayout>

</LinearLayout>
